# llm_test

./: .gitignore  README.md  content.txt  leo_tolstoy_war_and_peace.txt  make_contact_list.py  make_slides.py  make_titanic_db.py  poem.py  ppt.py  requirements.txt  sample_content.txt  titanic.db  titanic_test_db.py  titanic_test_nodb.py
any_query/: lng.py  pyproject.toml
any_query/src/: crew.py  main.py
any_query/src/config/: agents.yaml  tasks.yaml
any_query/tests/: test_db.py
config/: models.yaml  prompts.yaml
contacts/: app.py  get_model.py  llama.py  llama_app.py  llama_finetune.py  llama_ft_data.py  llama_rag.py  prompts.py  prompts.yaml  rag_tools.py  tokenizer.ipynb  unsloth_finetune.py  unsloth_make_data.py  unsloth_test.py  yandex_api.py
data/: contacts.xml  contacts_structure.json  departments.xml  labels.json  sample_content.txt  titanic.csv  training.json
lib/: get_llama_model.py  get_model.py  get_prompt.py
misc/: math.py  poem.py  titanic_test_nodb.py
slides_lng/: lng.py  make_slides.py  ppt.py  tools.py
sql_analyze/: lng.py
titanic/: pyproject.toml
titanic/titanic/: crew.py  main.py
titanic/titanic/config/: agents.yaml  tasks.yaml
titanic_crewai/titanic/: crew.py  main.py
titanic_crewai/titanic/config/: agents.yaml  tasks.yaml
titanic_lng/: lng.py
