[tool.poetry]
name = "src"
version = "0.1.0"
description = "Any_query"
authors = ["skolchin@example.com"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.55.2,<1.0.0" }

[tool.poetry.scripts]
any_query = "src.main:run"
run_crew = "src.main:run"
train = "src.main:train"
replay = "src.main:replay"
test = "src.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
