[tool.poetry]
name = "titanic"
version = "0.1.0"
description = "Titanic using crewAI"
authors = ["skolchin@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.55.2,<1.0.0" }

[tool.poetry.scripts]
titanic = "titanic.main:run"
run_crew = "titanic.main:run"
train = "titanic.main:train"
replay = "titanic.main:replay"
test = "titanic.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
